Dummy_Package_for_scratch_org/main/default/objects/Data_Set__c/fields/Data_Template__c.field-meta.xml
<CustomField>
    <fullName>Data_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Data Template record that defines related objects and their relationships for the attachments of this Data Set.</description>
    <inlineHelpText>The selected Data Template will be used as a base for object relationships, related fields and filtering.</inlineHelpText>
    <label>Data Template</label>
    <referenceTo>Data_Template__c</referenceTo>
    <relationshipLabel>Data Sets</relationshipLabel>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>