Dummy_Package_for_scratch_org/main/default/objects/Data_Set__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of what data contains this Data Set.</description>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>