Dummy_Package_for_scratch_org/main/default/objects/Data_Set__c/fields/Execution_Job__c.field-meta.xml
<CustomField>
    <fullName>Execution_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Job</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Data Sets</relationshipLabel>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>