Dummy_Package_for_scratch_org/main/default/objects/Data_Set__c/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <formula>TEXT(Execution_Job__r.Status__c)</formula>
    <label>File Execution Status</label>
    <type>Text</type>
</CustomField>