Dummy_Package_for_scratch_org/main/default/objects/Data_Set__c/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Environment where the data was extracted from in the last generation of Data Sets.</inlineHelpText>
    <label>Data Source Environment</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Data Sets</relationshipLabel>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>