Dummy_Package_for_scratch_org/main/default/objects/Data_Set__c/validationRules/Prevent_change_Data_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_Data_Template</fullName>
    <active>true</active>
    <description>This validation rule prevents the user from changing the Data Template field once the record has been created.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Data_Template__c)
)</errorConditionFormula>
    <errorDisplayField>Data_Template__c</errorDisplayField>
    <errorMessage>It is not allowed to change the Data Template once the Data Set has been created. Please create a new Data Set.</errorMessage>
</ValidationRule>